fixed error on checkout where stripe auth required modal was not showing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -349,6 +349,26 @@ color: #aab7c4;
   background-color: #fefde5 !important;
 }
 
+.processing-payment-overlay {
+  display: none;
+  min-height: 100vh;
+  min-width: 100vh;
+  width: 100vw;
+  background-color: rgba(145, 143, 143, 0.705);
+  position: relative;
+  z-index: 9999;
+}
+
+.complete-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #000 !important;
+}
+
+
+
 /* 8. Booking ------- */
 
 .booking-list-item {
